fix: addressing PR comments